--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,15 +1,17 @@
 {% include 'recipes/partials/head.html' %}
+
 <body>
-    <header class="main-header-container">
-        <div class="main-header-container">
-            <h1>
-                <a href="/">
-                    <i class="fas fa-address-book"></i>
-                    <span>Recipes</span>
-                </a>
-            </h1>
-        </div>
-    </header>
+
 </body>
+{% include 'recipes/partials/header.html' %}
+
+<div class="search-container">
+    <div class="container">
+        <form action="" class="search-form">
+            <input type="search" class="search-input" name="search">
+            <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
+        </form>
+    </div>
+</div>
 
 </html>
